<resources>
    <string name="app_name">Google Android Basics</string>
    <string name="congratulation">You must use a build variant that includes debuggable true in the build configuration.
        Usually, you can just select the default "debug" variant that\'s included in every Android Studio project
        (even though it\'s not visible in the build.gradle file). But if you define new build types that should be debuggable,
        you must add `debuggable true` to the build type:</string>
    <string name="image_burning">burning</string>
    <string name="textView0">Назад в прошлое, у которого было светлое будущее!</string>
    <string name="textView1">textViewOne</string>
    <string name="textView2">textViewTwo</string>
    <string name="happy">Happy</string>
    <string name="birthday">Birthday</string>
    <string name="to_you">To You</string>
    <string name="_10_miles_away">10 miles away</string>
    <string name="california">California</string>
    <string name="pebble_beach">Pebble Beach</string>
    <string name="burning">burning</string>
    <string name="you_re_invited">You\'re invited!</string>
    <string name="bonfire_at_the_beach">Bonfire at the beach</string>
    <string name="hello_world">Hello world</string>
    <string name="happy_birthday_vita">Happy Birthday, Vita!</string>
    <string name="from_papa">From Papa</string>
    <string name="androidparty">androidParty</string>
    <string name="quantity">QUANTITY</string>
    <string name="order">ORDER</string>
    <string name="value">0</string>
    <string name="price">Price</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
</resources>