<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HappyBirthday">

    <TextView
        android:id="@+id/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#124562"
        android:text="@string/textView0"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#124562"
        android:text="@string/textView1"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="#124562"
        android:text="@string/textView2"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:contentDescription="@string/image_burning"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/burning" />
</LinearLayout>