<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".JustJava">

    <TextView
        android:id="@+id/quantity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/increment_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/quantity_textView"
        android:layout_toStartOf="@+id/quantityNumber_textView"
        android:layout_margin="48dp"
        android:onClick="increment"
        android:text="@string/increment" />

    <TextView
        android:id="@+id/quantityNumber_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/value"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/decrement_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/quantity_textView"
        android:layout_margin="48dp"
        android:layout_toEndOf="@id/quantityNumber_textView"
        android:onClick="decrement"
        android:text="@string/decrement" />

    <TextView
        android:id="@+id/price_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantityNumber_textView"
        android:layout_marginTop="96dp"
        android:layout_centerHorizontal="true"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/priceNumber_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_textView"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:text="@string/value"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/submitOrder_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceNumber_textView"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:onClick="submitOrder"
        android:text="@string/order" />

</RelativeLayout>